# gamil-dycore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _config.yml  equations.md  index.md  operator_splitting.md  pole_scheme.md  run_test.sh  std_atm_deduct.md
_includes/: mathjax.html
_layouts/: mathjax.html
doc/: gamil-dycore-doc.latex  gamil-dycore-doc.tex  index.html
docs/: index.html  new.html  template.html
docs/details/: big_val_small_diff.html  energy_conservation.html  iap_transform.html  mass_eqn.html  perturb_form.html  vert_speed.html  wrf_perturb_pgf.html
lib/fft/: CMakeLists.txt  rfftb1.f  rfftf1.f
run/: namelist  namelist.jz_test  namelist.mz_test  namelist.rh_test
src/: data_mod.F90  diag_mod.F90  diffusion_mod.F90  dycore_main.F90  dycore_mod.F90  dycore_test.F90  filter_mod.F90  history_mod.F90  io_mod.F90  log_mod.F90  map_mod.F90  mesh_mod.F90  parallel_mod.F90  params_mod.F90  plot_reduced_grids.ncl  pole_a_grid_mod.F90  reduce_mod.F90  restart_mod.F90  space_operators_mod.F90  string_mod.F90  time_mod.F90  types_mod.F90  weno_mod.F90
src/test_cases/barotropic/: jet_zonal_flow_test_mod.F90  mountain_zonal_flow_test_mod.F90  plot_jet_zonal_flow_test.ncl  plot_mountain_zonal_flow_test.ncl  plot_rossby_haurwitz_wave_test.ncl  plot_shallow_water_waves_test.ncl  plot_steady_geostrophic_flow_test.ncl  rossby_haurwitz_test_mod.F90  rossby_haurwitz_wave_test_mod.F90  shallow_water_waves_test_mod.F90  steady_geostrophic_flow_test_mod.F90
tools/: analyze_wave_freq.py  plot_ke_spectrum.ncl  plot_reduced_grids.ncl  plot_tend_coriolis.ncl  plot_tend_mass_div.ncl  plot_tend_pgf.ncl  plot_tend_u_adv.ncl  plot_tend_v_adv.ncl
